fix too big keyboard on mobile

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body, html{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    margin-top: 15px;
 }
 
 #passwd div{
@@ -152,11 +153,26 @@ body, html{
         width: 40px;
         font-weight: 900;
     }
-    /* #img_container, #picture img{
+}
+
+@media only screen and (max-height: 650px){
+    #img_container, #picture img{
         height: 150px;
         width: auto;
-    } */
+    }
+    #counter{
+        font-size: 1.4em;
+        left: 17%;
+    }
 }
+
+@media only screen and (min-width: 375px) and (min-height: 700px){
+    #passwd, #picture{
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
+}
+
 
 @media only screen and (min-width: 900px){
     #game{
